--- a/manifest.json
+++ b/manifest.json
@@ -47,7 +47,7 @@
           "target": ["productsOverview"]
         },
         {
-          "pattern": "productDetails/{storeId}",
+          "pattern": "productDetails/{productId}/display",
           "name": "ProductDetails",
           "target": ["productDetails"]
         }
